--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
-  - type: static
+  - type: web
     name: recorrido-virtual
-    env: static
+    env: python
     buildCommand: ""
-    staticPublishPath: ./
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     plan: free
     autoDeploy: true
